# PacIFiC

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci-deactivated.yml  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.README  CMakePresets.json  LICENSE  README.md  build.sh  default.nix  flake.nix  pacific.spec
.copr/: Makefile  (+2 more)
Cartesian/FLUID/: CMakeLists.txt  Makefile  Makefile.mac  compil
Cartesian/FLUID/FluidSolidInterface/include/: FS_2Dbox.hh  FS_2Dcylinder.hh  FS_3Dbox.hh  FS_3Dcylinder.hh  FS_3Dspheroidcylinder.hh  FS_AllRigidBodies.hh  FS_Disc.hh  FS_GeneralPolyhedron.hh  FS_Grains3DPlugIn.hh  FS_RigidBody.hh  FS_RigidBody_BuilderFactory.hh  FS_SolidPlugIn.hh  FS_SolidPlugIn_BuilderFactory.hh  FS_Sphere.hh
Cartesian/FLUID/FluidSolidInterface/src/: FS_2Dbox.cc  FS_2Dcylinder.cc  FS_3Dbox.cc  FS_3Dcylinder.cc  FS_3Dspheroidcylinder.cc  FS_AllRigidBodies.cc  FS_Disc.cc  FS_GeneralPolyhedron.cc  FS_Grains3DPlugIn.cc  FS_RigidBody.cc  FS_RigidBody_BuilderFactory.cc  FS_SolidPlugIn_BuilderFactory.cc  FS_Sphere.cc
Cartesian/FLUID/Misc/src/: PAC_Misc.cc
Cartesian/FLUID/PostProcessing/src/: PostProcessing.cc
Cartesian/FLUID/lib/Linux-64-OpenMPI-3.1.6-GNU-9.3.0-MAC-1.0.0-PETSC-3.2.0-HYPRE-2.10.1/: exe0  exe2
Cartesian/MacWorld/MAC/: CMakeLists.txt
Cartesian/MacWorld/MAC/Env/: init.sh
Cartesian/MacWorld/MAC/etc/: Linux-  Linux_template.mak  extra-Linux-  extra-Linux_template.mak
Grains3D/: CMakeLists.txt  Makefile
Grains3D/DoxyGRAINS/: Doxyfile  Makefile
Grains3D/Env/: grains-OpenMPI-2.1.1-GNU-9.4.0.env.sh  grains_default.env.sh  grains_env_template.env.sh
Grains3D/Grains/: CMakeLists.txt  GrainsRecipes  Makedepend  Makefile
Grains3D/Grains/Base/include/: Basic.hh  Error.hh  GrainsExec.hh  MPINeighbors.hh
Grains3D/Grains/Base/src/: AppBrownian.cpp  AppCollision.cpp  Grains.cpp  GrainsBuilderFactory.cpp  GrainsCRBFeatures.cpp  GrainsExec.cpp  GrainsMPI.cpp
Grains3D/Grains/Component/include/: Obstacle.hh  Particle.hh
Grains3D/Grains/Component/src/: AllComponents.cpp  Component.cpp  CompositeObstacle.cpp  CompositeParticle.cpp  ContactBuilderFactory.cpp  CylindricalShell.cpp  HookeMemoryContactForceModel.cpp  ObstacleKinematicsVelocity.cpp  Particle.cpp  QuadrilobeCylinder.cpp  STLObstacle.cpp  SimpleObstacle.cpp  Torsor.cpp  TrilobeCylinder.cpp  TruncatedConicalShell.cpp
Grains3D/Grains/Fluid/include/: GrainsCoupledWithFluid.hh
Grains3D/Grains/Fluid/src/: GrainsCoupledWithFluid.cpp
Grains3D/Grains/Geometry/include/: BBox.hh  Box.hh  Cylinder.hh  OBB.hh  PointC.hh  PointContact.hh  Quaternion.hh  RigidBodyWithCrust.hh  STLVertex.hh  Shape.hh  Sphere.hh  SpheroCylinder.hh  SpheroCylindricalPrism.hh  Superquadric.hh
Grains3D/Grains/Geometry/src/: BBox.cpp  BVolume.cpp  Box.cpp  Cylinder.cpp  OBC.cpp  Point3.cpp  Polygon.cpp  Polyhedron.cpp  Polytope.cpp  RigidBody.cpp  STLVertex.cpp  Segment.cpp  SpheroCylinder.cpp  SpheroCylindricalPrism.cpp  Superquadric.cpp  TrapezoidalPrism.cpp  TruncatedCone.cpp  Vector3.cpp
Grains3D/Grains/InterfaceCBasilisk/include/: InterfaceGrains3DBasilisk.h
Grains3D/Grains/PostProcessing/src/: ParaviewPostProcessingWriter.cpp  ParaviewPostProcessingWriter_Serial.cpp  RawDataPostProcessingWriter.cpp
Grains3D/Grains/TimeIntegration/src/: FirstOrderExplicit.cpp  SecondOrderAdamsBashforth.cpp  SecondOrderExplicit.cpp
Grains3D/Grains/include/: AllComponents.hh  AppCollision.hh  Component.hh  CompositeObstacle.hh  CompositeParticle.hh  Convex.hh  ConvexBuilderFactory.hh  CylindricalShell.hh  GrainsMPI.hh  HookeMemoryContactForceModel.hh  KinematicsBuilderFactory.hh  OBC.hh  ObstacleBuilderFactory.hh  ObstacleImposedForce.hh  ObstacleImposedVelocity.hh  ObstacleKinematicsForce.hh  ObstacleKinematicsVelocity.hh  ParticleKinematics.hh  Point3.hh  Polyhedron.hh  QuadrilobeCylinder.hh  ReaderXML.hh  SecondOrderExplicit.hh  SimpleObstacle.hh  Torsor.hh  Transform.hh  TrilobeCylinder.hh  Vector3.hh
Grains3D/Main/: CMakeLists.txt
Grains3D/Main/dtd/: CMakeLists.txt  Generic_Grains3D.dtd  Grains2D.dtd  Grains3D.dtd  Grains3D_InFluid.dtd
Grains3D/Main/src/: CMakeLists.txt  Makedepend  Makefile
Grains3D/Tools/: CMakeLists.txt
Grains3D/Tools/PrePost/: CMakeLists.txt
Grains3D/Tools/PrePost/Position/: CMakeLists.txt
examples/example2/: CMakeLists.txt
examples/risingsphereunbounded/: CMakeLists.txt  README.md  risingsphereunbounded.c
src/Cartesian/FLUID/: CMakeLists.txt
src/Cartesian/MAC/: CMakeLists.txt  MACConfig.cmake
src/Grains3D/: CMakeLists.txt  GrainsConfig.cmake  README.md
src/Grains3D/Grains/: CMakeLists.txt
src/Grains3D/Main/: CMakeLists.txt
src/Grains3D/Tests/: CMakeLists.txt  main.cpp  nonconvex-settling.cpp  spheres-settling-new-grains.cpp
src/Grains3D/Tools/: CMakeLists.txt
src/Grains3D/cmake/: GrainsConfig.cmake.in
src/Octree/: CMakeLists.txt
src/Octree/DLMFD/: BasiliskGrains3DCouplingFunctions.h  Box.h  CircularCylinder2D.h  CircularCylinder3D.h  Cone.h  Cube.h  DLMFD_Grains3D.h  DLMFD_Toygs.h  DLMFD_Uzawa_velocity.h  DLMFD_Weight_functions.h  DLMFD_ns-centered.h  Dodecahedron.h  Icosahedron.h  InterfaceGrains3DBasilisk.h  Octahedron.h  Polyhedron.h  Sphere.h  Tetrahedron.h  TruncatedCone.h  iso_3D.h
src/Octree/LBM/: LBM.h  eul_to_lag.h  ibm.h  lag_stencil.h  lag_to_eul.h
src/Octree/MovingCutCell/: mycentered.h  mydiffusion.h  mydoubleprojection.h  myembed-moving-color.h  myembed-moving.h  myembed-particle-color.h  myembed-particle.h  myembed-tree-moving.h  myembed.h  myperfs.h  mypoisson.h  myquadratic.h  myspheroid.h  mytimestep.h  mytracer.h  myviscosity-embed.h
src/Octree/cmake/: BasiliskCTargets.cmake  OctreeConfig.cmake.in  octree_add_executable.cmake  qcc-pacific.in
src/Octree/eulerian_caps/: bending_2D.h  biconcave.h  capsule.h  elasticity.h  elasticity_2D.h  ew2_mpi.sh  kw2.sh  local_bcg.h  neo_hookean.h  neo_hookean_2D.h  normal_extension.h  skalak.h
src/Octree/lagrangian_caps/: adapt2.h  bending-ft.h  capsule-ft.h  curvature-ft.h  ho-neo-hookean-ft.h  matrix-toolbox.h  skalak-ft.h  update-source-file.sh  view-ft.h  viscosity-ft.h  vtu_output.h
(+1765 files in other folders)
